# backendai

./: LICENSE  README.md  pyproject.toml
backend/: main.py  requirements.txt
backend/app/core/: config.py
backend/app/models/: __init__.py  database.py
backend/app/routers/: __init__.py  breast.py  cervical.py
backend/app/services/: __init__.py  breast_pipeline.py  cervical_pipeline.py
database/: schema.sql
frontend/: app.js  index.html
